<resources>
    <string name="app_name">TodoApp_160718035</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptytodo">Your Todo List is Empty .Create a new one</string>
    <string name="newtodo">New Todo</string>
    <string name="todoTitle" />
    <string name="todoTitle1">Todo Title</string>
    <string name="todoNote">Notes</string>
    <string name="createTodo">Create ToDo</string>
    <string name="priority">Priority</string>
    <string name="highpriority">High Priority</string>
    <string name="mediumpriority">Medium Priority</string>
    <string name="lowpriority">Low Priority</string>
    <string name="edittodo">Edit</string>
    <string name="savechange">Save</string>
</resources>